# score-writer

./: .gitignore  LICENSE  README.md  cabal.project  example.score  run.sh  score-writer.cabal  stack.yaml
app/: Main.hs
src/: LilypondProcess.hs  Score.hs
src/Score/: Defaults.hs  Parser.hs  Prelude.hs  Render.hs  Types.hs
src/Score/Parser/: QQ.hs
src/Score/Render/: Music.hs  RenderedNote.hs
test/: Spec.hs
