name:                score-writer
version:             0.1.0.0
synopsis:            Pipe band drum score DSL for lilypond
description:         Please see README.md
homepage:            http://github.com/nkpart/score-writer#readme
license:             BSD3
license-file:        LICENSE
author:              Nick Partridge
maintainer:          nkpart@gmail.com
copyright:           2016 Nick Partridge
category:            Music
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Score
                       Score.Types
                       Score.Render
                       Score.Prelude
                       Score.Library.BBCOCA
                       LilypondProcess
  build-depends:       base >= 4.7 && < 5
                     , lens
                     , containers
                     , lilypond
                     , process
                     , prettify
                     , semigroups
                     , vector-space
  default-language:    Haskell2010
  ghc-options: -O2 -Wall -Werror

executable score-writer
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -Werror
  build-depends:       base
                     , score-writer
                     , process
                     , directory
                     , fsnotify
                     , hint
                     , filepath
                     , transformers
                     , exceptions
  default-language:    Haskell2010

test-suite score-writer-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , score-writer
                     , tasty
                     , tasty-golden
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/nkpart/score-writer
