name:                score-writer
version:             0.1.0.0
synopsis:            Pipe band drum score DSL for lilypond
description:         Please see README.md
homepage:            http://github.com/nkpart/score-writer#readme
license:             BSD3
license-file:        LICENSE
author:              Nick Partridge
maintainer:          nkpart@gmail.com
copyright:           2016 Nick Partridge
category:            Music
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Score
                       Score.Editor
                       Score.Types
                       Score.Render
                       Score.Prelude
                       Score.Parser
                       Score.Parser.QQ
                       LilypondProcess
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , process
                     , directory
                     , filepath
                     , temporary
                     , time

                     , lens
                     , mtl
                     , transformers
                     , semigroups
                     , semigroupoids

                     , template-haskell

                     , ansi-wl-pprint
                     , prettify
                     , lilypond
                     , vector-space

                     , parsers
                     , trifecta
                     , zippers

                     , string-qq
  default-language:    Haskell2010
  ghc-options: -O2 -Wall -Werror

executable score-writer
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -Werror
  build-depends:       base
                     , directory
                     , exceptions
                     , filepath
                     , fsnotify
                     , hint
                     , lens
                     , optparse-applicative
                     , process
                     , score-writer
                     , template-haskell
                     , transformers
                     , trifecta
                     , time
  default-language:    Haskell2010

test-suite score-writer-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test, library
  main-is:             Spec.hs
  build-depends:       base
                     , containers
                     , filepath
                     , score-writer
                     , tasty
                     , tasty-hunit
                     , tasty-golden
                     , template-haskell
                     , HUnit
                     , directory
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/nkpart/score-writer
